--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,18 @@
+exclude: ^compiled/|^components/charts/
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
     -   id: trailing-whitespace
-    # -   id: end-of-file-fixer
     -   id: check-docstring-first
     -   id: check-json
     -   id: check-yaml
         exclude:  |
             (?x)(
-                ^compiled/|
+                ^Docs/|
             )
     -   id: debug-statements
     -   id: name-tests-test
     -   id: requirements-txt-fixer
     -   id: double-quote-string-fixer
     -   id: check-merge-conflict
-# -   repo: https://github.com/gruntwork-io/pre-commit
-#     rev: v0.1.12
-#     hooks:
-#     -   id: shellcheck
-#         exclude:  |
-#             (?x)(
-#                 ^kapitan|
-#                 ^templates/scripts/import_kubernetes_clusters
-#             )
