--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -11,7 +11,7 @@ on:
     branches: [master]
 
 jobs:
-  lint-test:
+  integration-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
