--- a/compiled/tutorial/manifests/echo-server-service.yml
+++ b/compiled/tutorial/manifests/echo-server-service.yml
@@ -8,6 +8,12 @@ metadata:
   namespace: tutorial
 spec:
   ports:
+    - name: http
+      protocol: TCP
+      targetPort: http
+    - name: internal
+      protocol: TCP
+      targetPort: internal
     - name: nginx
       port: 80
       protocol: TCP
