--- a/compiled/vault/manifests/vault-service.yml
+++ b/compiled/vault/manifests/vault-service.yml
@@ -15,6 +15,9 @@ spec:
       port: 8200
       protocol: TCP
       targetPort: http
+    - name: http-rep
+      protocol: TCP
+      targetPort: http-rep
     - name: https-internal
       port: 8201
       protocol: TCP
@@ -43,6 +46,9 @@ spec:
       port: 8200
       protocol: TCP
       targetPort: http
+    - name: http-rep
+      protocol: TCP
+      targetPort: http-rep
     - name: https-internal
       port: 8201
       protocol: TCP
@@ -72,6 +78,9 @@ spec:
       port: 8200
       protocol: TCP
       targetPort: http
+    - name: http-rep
+      protocol: TCP
+      targetPort: http-rep
     - name: https-internal
       port: 8201
       protocol: TCP
