--- a/compiled/kapicorp-project-123/terraform/gcp_project_id.tf.json
+++ b/compiled/kapicorp-project-123/terraform/gcp_project_id.tf.json
@@ -2,11 +2,11 @@
   "resource": {
     "gcp_project_id": {
       "main": {
+        "auto_create_network": false,
+        "billing_account": "jpzaR_ArxEkpIIljqRpFstsP_yw34RR07D6lAynfwIw",
         "name": "kapicorp-project-123",
         "org_id": "az1oDhA50eU5d2ToHhNFrSaWNqAa1iaosXyZfd6SZQ2",
-        "auto_create_network": false,
-        "project_id": "kapicorp-project-123",
-        "billing_account": "jpzaR_ArxEkpIIljqRpFstsP_yw34RR07D6lAynfwIw"
+        "project_id": "kapicorp-project-123"
       }
     }
   }
